test/sematest/valid/unreachable_if_with_no_return_in_else_branch.java
class Test {
    public static void main(String[] args) {
        Test t = new Test();
        t.test();
    }

    public boolean test() {
        int a = 0;
        return false;
        if (1 == 2)
            return true;
        else
            a = 42;
    }
}
