test/sematest/invalid/missing_return_after_untaken_while.java
class Test {
    public static void main(String[] args) {
        Test t = new Test();
        t.test();
    }

    public int test() {
        while (false) {
            return 42;
        }
    }
}
